--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CreatorLabs</title>
-    <link rel="icon" type="image/x-icon" href="images/cog_icon.jpg">
+    <link rel="icon" type="image/x-icon" href="images/cog_icon.jpg?">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="homepage.css">
 </head>
