Uploaded refined project

--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
+<!-- 
+    WEBSITE HOMEPAGE -- Includes info like what the community is for, and brief overviews of the website. Also includes navbar to navigate to other important info
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Setting up website attributes and linking images/files to the page. -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CreatorLabs</title>
-    <link rel="icon" type="image/x-icon" href="images/cog_icon.jpg?">
+    <link rel="icon" type="image/x-icon" href="images/cog_icon.jpg">
     <link rel="stylesheet" href="fonts.css">
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!-- Header of webpage -->
     <header>
+        <!-- Website Navbar -->
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="#"><b>Creator</b>Labs</a>
+                    <a href="index.html"><b>Creator</b>Labs</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">Home</a>
@@ -34,10 +42,19 @@
         </nav>
     </header>
 
-    <main>
-        
+    <!-- Body of webpage -->
+    <main class="doc-body">
+        <div class="doc-filler"></div>
+
+        <div class="doc-title">
+            <em>Create</em> <br> <b>Without Limits.</b>
+        </div>
+        <div class="metalworking-img">
+            <img src="images/metalworking.jpg">    
+        </div>
     </main>
 
+    <!-- Footer of le webpage -->
     <footer>
         
     </footer>
