--- a/equipment.html
+++ b/equipment.html
@@ -1,18 +1,13 @@
-<!-- 
-    WEBSITE HOMEPAGE -- Includes info like what the community is for, and brief overviews of the website. Also includes navbar to navigate to other important info
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Setting up website attributes and linking images/files to the page. -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CreatorLabs</title>
     <link rel="icon" type="image/x-icon" href="images/cog_icon.jpg">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="equipment.css">
 </head>
 <body>
     <!-- Header of webpage -->
@@ -44,32 +39,40 @@
 
     <!-- Body of webpage -->
     <main id="doc-body">
-        <div class="doc-filler"></div>
+        <div class="flex-break"></div>
 
-        <!-- Title/motto of webpage -->
         <div id="doc-title">
-            <em>Create</em> <br> &nbsp; &nbsp; &nbsp; <b>Without Limits.</b>
+            <b>Our Equipment</b>
         </div>
-
-        <!-- Workshop image -->
-        <div id="workshop-img">
-            <img src="images/workshop.jpg">    
-        </div>
-
-        <!-- Company summary/description -->
-        <div id="doc-description">
-            <p>
-                Here at CreatorLabs, we believe you should be able to create your imagination and to bring your ideas to <i><b>life.</b></i>
-                Thats why we developed a dynamic and active workshop and community that you can use to bring together your project.
-            </p>
-        </div>
-
-        <!-- "Learn more" button -->
-        <div class="flex-break"></div>
-        <button id="learn-more-button" title="Learn More!"><a href="#" style="text-decoration: none; color: var(--secondary-text-color);">Learn More!</a></button>
         <div class="flex-break"></div>
 
-        <div id="equipment-section">reeehheheh</div>
+        <div id="doc-description-1">
+            &nbsp; &nbsp; &nbsp; &nbsp; The equipment we have in stock is constantly changing and full of tools that you would normally see 
+            in your everyday workshop. We provide an expansive selection of power tools, mills, 3D printers... And the list goes on! Here is
+            some of the equipment we provide for members of the makerspace:
+        </div>
+        <div id="equipment-img">
+            <img src="images/tools.webp" alt="tools">
+        </div>
+        <div class="flex-break"></div>
+
+        <div id="doc-description-2">
+            <ul>
+                <li>Table Saw</li>
+                <li>Band Saw</li>
+                <li>Wood Lathes</li>
+                <li>Sewing Stations</li>
+                <li>Computer Stations</li>
+                <li>Soldering Equipment</li>
+                <li>3D Printers</li>
+                <li>Welding Equipment</li>
+                <li>Cutting Tools</li>
+                <li>Drills</li>
+                <li>Electronics Equipment</li>
+                <li>Small Components</li>
+                <li>... And much more!</li>
+            </ul>
+        </div>
     </main>
 
     <!-- Footer of le webpage -->
