--- a/calendar.html
+++ b/calendar.html
@@ -1,5 +1,5 @@
-<!-- 
-    WEBSITE HOMEPAGE -- Includes info like what the community is for, and brief overviews of the website. Also includes navbar to navigate to other important info
+<!--
+    CALENDAR WEBPAGE -- Shows calendar and event schedule for CreatorLabs
 -->
 
 <!DOCTYPE html>
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="images/cog_icon.jpg">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="calendar.css">
 </head>
 <body>
     <!-- Header of webpage -->
@@ -44,30 +44,34 @@
 
     <!-- Body of webpage -->
     <main id="doc-body">
-        <div class="doc-filler"></div>
-
-        <!-- Title/motto of webpage -->
-        <div id="doc-title">
-            <em>Create</em> <br> &nbsp; &nbsp; &nbsp; <b>Without Limits.</b>
-        </div>
-
-        <!-- Workshop image -->
-        <div id="workshop-img">
-            <img src="images/workshop.jpg">    
-        </div>
-
-        <!-- Company summary/description -->
-        <div id="doc-description">
-            <p>
-                Here at CreatorLabs, we believe you should be able to create your imagination and to bring your ideas to <i><b>life.</b></i>
-                Thats why we developed a dynamic and active workshop and community that you can use to bring together your project.
-            </p>
-        </div>
-
-        <!-- "Learn more" button -->
         <div class="flex-break"></div>
-        <button id="learn-more-button" title="Learn More!"><a href="membership.html" style="text-decoration: none; color: var(--secondary-text-color);">Learn More!</a></button>
+
+        <div id="doc-title"> Calendar & Events </div>
         <div class="flex-break"></div>
+
+        <div id="event-list">
+            <h2>March</h2>
+            <ul>
+                <li>2nd - Shop Basics Class</li>
+                <li>6th - Sewing Workshop</li>
+                <li>8th - Metalworking Class</li>
+                <li>15th - Building Contest</li>
+                <li>19th - Shop Basics Class</li>
+                <li>23rd - Professional Masterclass</li>
+                <li>27th - Art Museum Showcase</li>
+                <li>30th - Shop Basics Class</li>
+            </ul>
+
+            <h2>April</h2>
+            <ul>
+                <li>1st - CAD Beginners Class</li>
+                <li>7th - Robotics Basics</li>
+                <li>10th - Shop Basics Class</li>
+            </ul>
+        </div>
+        <div class="flex-break"></div>
+
+        <div id="closing">Stay posted for more updates!</div>
     </main>
 
     <!-- Footer of le webpage -->
