--- a/membership.html
+++ b/membership.html
@@ -1,13 +1,18 @@
+<!--
+    MEMBERSHIP INFO WEBPAGE -- Webpage that shows membership details of CreatorLabs
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Setting up website attributes and linking images/files to the page. -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CreatorLabs</title>
     <link rel="icon" type="image/x-icon" href="images/cog_icon.jpg">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="equipment.css">
+    <link rel="stylesheet" href="membership.css">
 </head>
 <body>
     <!-- Header of webpage -->
@@ -43,45 +48,39 @@
 
         <!-- Title of webpage -->
         <div id="doc-title">
-            <b>Our Equipment</b>
+            <b>How do I become a member?</b>
         </div>
         <div class="flex-break"></div>
 
-        <!-- First document paragraph and equipment img -->
+        <div id="doc-subtitle-1">
+            <i>How do I register?</i>
+        </div>
         <div id="doc-description-1">
-            &nbsp; &nbsp; &nbsp; &nbsp; The equipment we have in stock is constantly changing and full of tools that you would normally see 
-            in your everyday workshop. We provide an expansive selection of power tools, mills, 3D printers... And the list goes on! Here is
-            some of the equipment we provide for members of the makerspace:
-        </div>
-        <div id="equipment-img">
-            <img src="images/tools.webp" alt="tools">
+            You can stop by our location preferrably during classes or events and ask one of our volunteers or employees about becoming a member of the makerspace, 
+            so you are able to reserve space in the building. We are open all days except for holidays from 7AM to 9PM.
         </div>
         <div class="flex-break"></div>
 
-        <!-- Table saw image and list of equipment -->
-        <div id="table-saw-img">
-            <img src="images/table_saw.jpg" alt="table saw">
-        </div>
         <div id="doc-description-2">
-            <ul>
-                <li>Table Saw</li>
-                <li>Band Saw</li>
-                <li>Wood Lathes</li>
-                <li>Sewing Stations</li>
-                <li>Computer Stations</li>
-                <li>Soldering Equipment</li>
-                <li>3D Printers</li>
-                <li>Welding Equipment</li>
-                <li>Cutting Tools</li>
-                <li>Drills</li>
-                <li>Electronics Equipment</li>
-                <li>Small Components</li>
-                <li>... And much more!</li>
-            </ul>
+            Being a member of CreatorLabs costs $60 a month, and it allows you to use the space and any equipment you need while we're open, as long as you reserve space in advance.
+        </div>
+        <div id="doc-subtitle-2">
+            How much will it cost?
         </div>
         <div class="flex-break"></div>
 
-        
+        <img src="images/3d-printer.avif" alt="3d printer" id="3d-printer-img" style="width: 60vw; margin-top: 5vh; border-style: 5px solid var(--primary-accent-color); border-radius: 200px;">
+        <div class="flex-break"></div>
+
+        <div id="doc-subtitle-3">
+            But wait...
+        </div>
+        <div class="flex-break"></div>
+
+        <div id="doc-description-3">
+            In order to be allowed to use the equipment and various powered tools in the shop, you will first have to take a shop basics class, and get a certificate showing
+            that you have been educated on the proper methods of using the equipment at this makerspace.
+        </div>
     </main>
 
     <!-- Footer of le webpage -->
