--- a/calendar.html
+++ b/calendar.html
@@ -38,6 +38,9 @@
                 <li class="nav-item">
                     <a href="booking.html">Book</a>
                 </li>
+                <li class="nav-item">
+                    <a href="references.html">References</a>
+                </li>
             </ul>
         </nav>
     </header>
