--- a/equipment.html
+++ b/equipment.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a href="booking.html">Book</a>
                 </li>
+                <li class="nav-item">
+                    <a href="references.html">References</a>
+                </li>
             </ul>
         </nav>
     </header>
