--- a/membership.html
+++ b/membership.html
@@ -72,7 +72,7 @@
         </div>
         <div class="flex-break"></div>
 
-        <img src="images/3d-printer.avif" alt="3d printer" id="3d-printer-img" style="width: 60vw; margin-top: 5vh; border-style: 5px solid var(--primary-accent-color); border-radius: 200px;">
+        <img src="images/3d-printer.jpg" alt="3d printer" id="3d-printer-img" style="width: 60vw; margin-top: 5vh; border-style: 5px solid var(--primary-accent-color); border-radius: 200px;">
         <div class="flex-break"></div>
 
         <div id="doc-subtitle-3">
