--- a/references.html
+++ b/references.html
@@ -8,7 +8,16 @@
 <body>
     <h1>References</h1>
     <a href="work_log.pdf">Work Log</a>
-    <p>No external sources used to create the website.</p>
+    <a href="copyright_checklist.pdf">Copyright Checklist</a>
+    <h2>Sources used for stock images:</h2>
+    <ul>
+	<li>Adobe Stock</li>
+	<li>istockphotos.com</li>
+	<li>Max Pixel - Public Domain</li>
+	<li>IStock</li>
+    </ul>
+    <br>
+    <p>No other external sources used to create the website.</p>
     <a href="index.html">Return to homepage</a>
 </body>
 </html>
